[package]
name = "uncle-qiu-sign-in"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.5", default-features = false, features = ["std", "std_rng"]}
serde_json = {version = "1.0.85", default-features = false}
reqwest = {version="0.11.12", default-features=false, features = ["json", "rustls-tls"]}
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread"] }
anyhow = {version="1.0.65"}
dotenv = {version="0.15.0"}
# openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true
opt-level="z"
codegen-units = 1
panic = "abort"
strip = true